--- a/ad_rss/CMakeLists.txt
+++ b/ad_rss/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/src/core/RssResponseResolving.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/core/RssSituationChecking.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/core/RssSituationExtraction.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/logging/ExtendedSituationData.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/situation/Physics.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/situation/RssFormulas.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/situation/RssStructuredSceneIntersectionChecker.cpp
@@ -57,6 +58,7 @@ add_library(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${TARGET_COMPILE_DEFINITIONS})
 target_compile_options(${PROJECT_NAME} PRIVATE ${TARGET_COMPILE_OPTIONS})
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS ${TARGET_LINK_FLAGS})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Version.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME}/Version.hpp)
